# upper-division-cs-23-24

./: .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.Dockerfile.orig  .gitpod.yml  Collaboration.md  IndependentLearningContract.md  LICENSE  README.md  SlackChannel  Torsten_HealthData.csv  mst.py  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: maven.yml  mkdocs.yml
InterviewQuestions/: ch3.1_FixedDivision.java
MarmotBathTime/: README.md
Trinity-app/: pom.xml
ai-24sp/: .gitignore  AI.md
ai-24sp/assignments/AkinaS/: .gitignore
ai-24sp/assignments/ppham/: .gitignore  (+1 more)
ai-24sp/prototypes/: .gitignore  README.md  load-images.py  load-labels.py  mnist_loader.py  network.py  readme
ccdc/: Index.md
ccdc/command_sheets/: Linux_basic_commands.md  Linux_helpfull_commands.md  windows_eq_basic_commands.md  windows_helpful_equiv.md
ccdc/scenarios/: AdditionalScenarios.md  Scenario1.md  Scenario2.md  Scenario3.md  Scenario4.md
ccdc/strategies/: strategies.md
config/: yggdrasil-key.txt  yggdrasil.conf
docs/: 404.html  index.html
docs/dsa-23au/: 404.html  index.html
docs/old-index/: index.html
docs/search/: search_index.json
docs/web-24wi/: .index.html.swp  index.html
dsa-23au/: FinalProject.md  IntellijSetup.md  PeriodicTable.md  Projects.md  README.md  SoftwareSetup.md
dsa-23au/Jon-AppFinal/: Crime.csv  CrimeData.py  CrimeDatabase.py  README.md
dsa-23au/docs/: FinalProject.md  IntellijSetup.md  README.md  SoftwareSetup.md  index.md
dsa-23au/java-dsa/: .gitignore  JavaLoopsII.md  README.md  WesDav  install.sh
dsa-23au/ndeanon25/: README.md  pom.xml
dsa-23au/notes/: SUMMARY.md  SoftwareSetup.md  build.sh  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_7.md  chapter_8.md  chapter_9.md  mkdocs.yml  serve.sh  syllabus-out.html  syllabus.py  topics-list.json
dsa-23au/python-dsa/: DriverMain.py  preprocess_csv.py
dsa-23au/reveal-slides/: Slides-20-DynamicProgramming.html
dsa-23au/scripts/: build-all.sh  build-docs.sh  build.sh  generate_syllabus.sh  native-image.sh  old-ps1.txt  profile.sh  syllabus.py
faulkdf-app/: README.md  pom.xml
my-app/: pom.xml
new-24wi/: Web Architecture.drawio
notes/: README.md  build.sh  mkdocs.yml
notes/docs/: index.md  old-index.md
notes/site/: index.html
sc-24sp/: .gitignore  flake.nix
sc-24sp/OS_code/: Makefile  q2.c
sc-24sp/assignments/NathanMcL/city-addresses/: Cargo.toml  city-map.txt  readme.md  street-names.txt
sc-24sp/assignments/NathanMcL/city-addresses/src/: city_drawer.rs  main.rs  name_reader.rs
sc-24sp/assignments/Wizard0523/wasm-game-of-life/: Cargo.toml  LICENSE_MIT
sc-24sp/assignments/Wizard0523/wasm-game-of-life/src/: lib.rs
sc-24sp/assignments/Wizard0523/wasm-game-of-life/tests/: web.rs
sc-24sp/assignments/Wizard0523/wasm-game-of-life/wwww/: index.html  index.js  package-lock.json  package.json  webpack.config.js
sc-24sp/assignments/poperigby_abyssalremark/city-addresses/: Cargo.toml
sc-24sp/assignments/poperigby_abyssalremark/city-addresses/src/: city.rs  city_drawer.rs  main.rs
sc-24sp/assignments/pswish-sc/game-of-life3/wasm-game-of-life/: Cargo.toml  LICENSE_MIT  package.json
sc-24sp/assignments/pswish-sc/game-of-life3/wasm-game-of-life/src/: lib.rs
sc-24sp/assignments/pswish-sc/game-of-life3/wasm-game-of-life/www-backups/: index.html  index.js  package.json
sc-24sp/diagrams/: Git-Tac-Toe.drawio
sc-24sp/git-games/: clone-games.sh
sc-24sp/pswish-code/: shell2.c
scripts/: .shrc  dl-graalvm.sh  git-config.sh  install-rustlings.sh
secpol/rilespaul/: requirements.txt
staff/: ta-contract.md
web-24wi/: .gitattributes  FinalProject.md  README.md  Setup.md  SoftwareSetup.md  Syllabus.md  Teams.md  Track-FrontEnd.md  Track-Infra.md  hello-world.hw  package-lock.json  package.json  pnpm-lock.yaml
web-24wi/assignments/aquinnallen/something_else/ass_reader/: Cargo.toml  asses.csv  asses2.csv
web-24wi/assignments/aquinnallen/something_else/ass_reader/src/: ass_reader.rs
web-24wi/assignments/aquinnallen/something_else/ass_server/: Cargo.toml
web-24wi/assignments/aquinnallen/something_else/ass_server/src/: ass_reader.rs  main.rs
web-24wi/assignments/poperigby/frontend/pet-adoption/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js
web-24wi/assignments/poperigby/frontend/pet-adoption/public/: style.css  tailwind.css
web-24wi/assignments/poperigby/frontend/pet-adoption/src/: api.rs  breed.rs  details.rs  main.rs  modal.rs  pet.rs  results.rs  search.rs
web-24wi/assignments/poperigby/frontend/week3/: Cargo.toml  Dioxus.toml
web-24wi/assignments/poperigby/frontend/week3/src/: main.rs  search.rs  search_params.rs
web-24wi/assignments/poperigby/frontend/week3/src/search/: mod.rs  pets.rs
web-24wi/assignments/poperigby/rust/week2/wasm/: Cargo.toml  README.md
web-24wi/assignments/poperigby/rust/week2/wasm/src/: lib.rs
web-24wi/assignments/poperigby/rust/week2/wasm/web/: index.html  main.js  style.css
web-24wi/data/: AppleWatchData.csv
web-24wi/docs/: AWS-EC2-Setup.md  GitWorkflow.md  Hackathon.md  I-Heal-When-I-Put-My-Mind-To-Something.md  README.md  Recording-Video.md
web-24wi/hackathons/: pnpm-lock.yaml  server.js
web-24wi/scripts/: api-server-start.sh  attach-terminal.sh  create_branch_and_push.sh  docker_connect.sh  netstat-check.sh  web-dev.sh  web-include.sh
(+3657 files in other folders)
