[package]
name = "city-addresses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.release]

strip = true # 324K
opt-level = "z"  # Optimize for size.
lto = true # 279K
codegen-units = 1 # 295K
panic = "abort" # 279K