[package]
name = "ass_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text_io = "0.1.12"
rand = "0.8" 
actix-cors= "0.7.0"
