[package]
name = "pet-adoption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
dioxus = "0.4.3"
dioxus-logger = "0.4.1"
dioxus-query = "0.4.0"
dioxus-router = "0.4.3"
dioxus-web = "0.4.3"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.196"
